Fix word-wrapping in chat (issue #49)

--- a/public/css/screen.styl
+++ b/public/css/screen.styl
@@ -643,6 +643,7 @@ body {
 			margin: 0px 0px 45px 0px;
 
 			.chat-message {
+        word-wrap: break-word;
 
 				&.past {
 					opacity: 0.3;
